--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".WomenActivity"></activity>
+        <activity android:name=".RecoveryPassword"></activity>
+        <activity android:name=".WomenActivity" />
         <activity android:name=".submitActivity" />
         <activity android:name=".MenActivity" />
         <activity android:name=".signupActivity" />
